<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPlacesToBeChosen"
        android:text="@string/photoActivity_place_tag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/sPlacesToBeChosen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">
    </Spinner>

    <TextView
        android:id="@+id/tvRoomsToBeChosen"
        android:text="@string/photoActivity_room_tag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/sRoomsToBeChosen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">
    </Spinner>

    <Button
        android:id="@+id/bTakePhotos"
        android:text="@string/buttonToStartCamera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>